# edu-advent-2023

./: .gitignore  README.md  advent.cabal  day01.hs  day01.py  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  default.nix
grid/: Grid.hs
heap/: Heap.hs
prelude/: JediPrelude.hs
