cabal-version: 3.0
version: 1.0.0.0
name: advent
-- vim: foldmethod=marker

library jedi-prelude -- {{{
  hs-source-dirs: prelude
  exposed-modules: JediPrelude
  default-language: GHC2021
  ghc-options: -O2
  mixins: base hiding (Prelude), base-prelude (BasePrelude as Prelude)
  build-depends: base, base-prelude
    , array
    , containers
    , lens
    , megaparsec
    , split
    , text
    -- }}}

common shared -- {{{
  -- {{{
  default-language: GHC2021
  ghc-options: -O2
  mixins: base hiding (Prelude), jedi-prelude (JediPrelude as Prelude)
  default-extensions:
    BlockArguments
    CPP
    DataKinds
    DerivingVia
    ImplicitParams
    LambdaCase
    MonadComprehensions
    MultiWayIf
    PatternSynonyms
    RecordWildCards
    TransformListComp
    TypeFamilies
    ViewPatterns
  -- }}}
  build-depends: base, jedi-prelude
    , containers
    , megaparsec
    , text
  -- }}}

executable day01 -- {{{
  import:  shared
  main-is: day01.hs
  -- }}}
executable day02 -- {{{
  import:  shared
  main-is: day02.hs
  -- }}}
executable day03 -- {{{
  import:  shared
  main-is: day03.hs
  -- }}}
